# OS2

lab1&2/: a.out  main.c
lab10/: main.c
lab11/: main.c
lab13/: a.out  main.c
lab14/: CMakeLists.txt  main.c
lab16/: CMakeLists.txt  a.out  main.c
lab17/: CMakeLists.txt  main.c
lab18/: main.c
lab24/: CMakeLists.txt  a.out  main.c
lab27/: CMakeLists.txt  client.go  main.c  server.go
lab3/: main.c
lab31/: CMakeLists.txt  main.c
lab32_proxy/: CMakeLists.txt  Cache.c  Cache.h  TaskList.c  TaskList.h  main.c  read_request.c  read_request.h  read_response.c  read_response.h  threadArguments.h  write_request.c  write_request.h  write_response.c  write_response.h
lab33_proxy/: CMakeLists.txt  Cache.c  Cache.h  TaskList.c  TaskList.h  main.c  str.c  workThread.c  workThread.h
lab4/: main.c
lab5/: main.cpp
lab6/: main.c
lab7/: CMakeLists.txt  arg_path.h  cpR  dirHandler.c  dirHandler.h  main.c  regFileHandler.c  regFileHandler.h
lab7/testdir1/subdir1/: stat
lab7/testdir2/subdir1/: piece_of_man
lab8/: main.c
untitled/: main.c
